--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : atomsign
     livefyre :
       site_id : 123
     intensedebate :
@@ -99,7 +99,7 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-2331179-5'
     getclicky :
       site_id : 
     mixpanel :
@@ -124,3 +124,14 @@ JB :
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
   
+  # Settings for ads-providers
+  # Set 'provider' to the ads provider you want to use.
+  # Set 'provider' to false to turn analytics off globally.
+  #
+  ads :
+    provider : google
+    google: 
+      ad_client : 'ca-pub-8946397991010135'
+      ad_slot : '5653404617'
+      ad_width : 728
+      ad_height : 90
